--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,78 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
+    android:layout_height="wrap_content"
+    android:paddingBottom="4dp"
+    >
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="15dp">
+
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/item_quantity"
-                android:layout_below="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/item_name"
                 android:paddingTop="4dp"
                 android:text="@string/app_name"
-                android:textStyle="italic"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="italic" />
+
             <TextView
                 android:id="@+id/item_color"
-                android:layout_below="@+id/item_quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/item_quantity"
                 android:text="@string/app_name"
-                android:textStyle="italic"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="italic" />
+
             <TextView
                 android:id="@+id/item_size"
-                android:layout_below="@+id/item_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/item_color"
                 android:text="@string/app_name"
-                android:textStyle="italic"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="italic" />
+
             <TextView
                 android:id="@+id/item_date"
-                android:layout_below="@+id/item_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/item_size"
                 android:text="@string/app_name"
-                android:textStyle="italic"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="italic" />
 
             <TableRow
-                android:layout_alignParentEnd="true"
-                android:orientation="horizontal"
-                android:layout_marginTop="15dp"
-                android:layout_alignBottom="@id/item_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content">
+                android:layout_alignBottom="@id/item_date"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
                 <Button
                     android:id="@+id/edit_button"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginEnd="15dp"
-                    android:background="@android:drawable/ic_menu_edit"
-                    />
+                    android:background="@android:drawable/ic_menu_edit" />
+
                 <Button
                     android:id="@+id/delete_button"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginEnd="15dp"
-                    android:background="@android:drawable/ic_delete"
-                    />
+                    android:background="@android:drawable/ic_delete" />
 
             </TableRow>
         </RelativeLayout>
